--- a/index.html
+++ b/index.html
@@ -31,19 +31,25 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     }
 
-    video, #overlay {
+    video {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 20px;
+      transform: scaleX(-1); /* Mirror preview */
     }
 
     #overlay {
-      z-index: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       pointer-events: none;
+      z-index: 2;
     }
 
     .buttons {
@@ -82,8 +88,8 @@
   </div>
 
   <div class="buttons">
-    <button onclick="setOverlay('jk.png')">💜 Jungkook</button>
-    <button onclick="setOverlay('v.png')">💙 Taehyung</button>
+    <button onclick="setOverlay('jk-right.png')">💜 Jungkook</button>
+    <button onclick="setOverlay('v-right.png')">💙 Taehyung</button>
     <button onclick="takePhoto()">📥 Save</button>
   </div>
 
@@ -95,7 +101,6 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
 
-    // Start the camera
     navigator.mediaDevices.getUserMedia({ video: true })
       .then(stream => {
         video.srcObject = stream;
@@ -110,7 +115,12 @@
     }
 
     function takePhoto() {
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      // Mirror the canvas content too
+      ctx.save();
+      ctx.scale(-1, 1); // mirror horizontally
+      ctx.drawImage(video, -canvas.width, 0, canvas.width, canvas.height);
+      ctx.restore();
+
       ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
 
       const link = document.createElement('a');
