--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   </div>
 
   <div class="buttons">
-    <button onclick="setOverlay('jk-right.png')">💜 Jungkook</button>
-    <button onclick="setOverlay('v-right.png')">💙 Taehyung</button>
+    <button onclick="setOverlay('jk.png')">💜 Jungkook</button>
+    <button onclick="setOverlay('v.png')">💙 Taehyung</button>
     <button onclick="takePhoto()">📥 Save</button>
   </div>
 
